--- a/LIST/TYPE/001_コーポレートサイト/index.html
+++ b/LIST/TYPE/001_コーポレートサイト/index.html
@@ -98,29 +98,29 @@
       <div class="container">
         <h2 class="title">Buisiness</h2>
         <div class="item-first">
-          <img class="item-first__img" src="/img/security.svg" alt="" width="100%">
+          <img class="item-first__img" src="/img/security.svg" alt="" width="80%">
           <h3 class="item-first__ttl">調査・コンサルティング</h3>
           <p class="item-first__txt">お客様の課題のご相談、システムの状況診断、緊急事態発生時の対策など、今必要な支援を提供いたします。</p>
         </div>
         <div class="item-second">
-          <img class="item-second__img" src="/img/people.svg" alt="" width="70%">
+          <img class="item-second__img" src="/img/people.svg" alt="" width="80%">
           <h3 class="item-second__ttl">ITエンジニア派遣/技術支援</h3>
           <p class="item-second__txt">不足した人的リソースを提供する技術支援を行なっています。高い技術力を持ち、円滑なプロジェクト進行の一助にもなるエンジニアを派遣します。</p>
         </div>
         <div class="item-third">
-          <img class="item-third__img" src="/img/watch.svg" alt="" width="100%">
+          <img class="item-third__img" src="/img/watch.svg" alt="" width="80%">
           <h3 class="item-third__ttl">監視・運用</h3>
           <p class="item-third__txt">不正アクセス通信の分析や不正侵入検知後のインシデント対応までを、リアルタイムで実施するセキュリティ監視・運用サービスです。</p>
         </div>
         <div class="item-forth">
-          <img class="item-forth__img" src="/img/teach.svg" alt="" width="70%">
+          <img class="item-forth__img" src="/img/teach.svg" alt="" width="80%">
           <h3 class="item-forth__ttl">教育事業</h3>
           <p class="item-forth__txt">ITの基礎知識獲得から資格取得まで、未経験者からでも成長できるカリキュラムを提供します。ヒューマンスキル研修を取り入れることで、“自分から”行動できるITエンジニアを育成します。</p>
         </div>
       </div>
     </div>
 
-    <div class="recruit">
+    <div id="recruit" class="recruit">
       <div class="container">
         <h2 class="title">Recruit</h2>
         <div class="item-first">
@@ -142,7 +142,7 @@
       <button class="button" type="button">詳細を確認する</button>
     </div>
 
-    <div class="about">
+    <div id="about" class="about">
       <h2 class="title">About</h2>
       <div class="container">
         <dl class="inner__list">
@@ -178,7 +178,7 @@
       </div>
     </div>
 
-    <div class="contact">
+    <div id="contact" class="contact">
       <div class="container">
         <h2 class="title">Contact</h2>
         <div class="name">
