--- a/index.html
+++ b/index.html
@@ -1,173 +1,107 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-  <meta property='og:type' content='website'>
-  <meta property='og:title' content='WebデザイナーKazuki Oguma ポートフォリオ'>
-  <meta property='og:url' content='URLが入る'>
-  <meta property='og:description' content='Kazuki Ogumaのポートフォリオサイトです。'>
-  <meta property="og:image" content="img/ogp.png">
-  <meta name="description" content="Kazuki Ogumaのポートフォリオサイトです" />
-  <title>Kazuki Oguma</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
-  <link href="./css/ress.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="./css/style.css" media="all" rel="stylesheet" type="text/css" />
-  <link rel="shortcut icon" href="./img/favicon.ico" />
-  <!-- <link rel=”canonical” href=”URLが入る” /> -->
+  <!-- meta -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- title -->
+  <title>Kazuki Oguma | Portfolio</title>
+
+  <!-- og -->
+
+  <!-- css -->
+  <link rel="stylesheet" href="/css/ress.css">
+  <link rel="stylesheet" href="/css/styele.css">
+
 </head>
-
 <body>
-  <div class="wrapper">
-
-    <!-- header -->
-    <header class="header">
-      <div class="header-inner">
-        <h1 class="header-logo">
-          <a href=".">Kazuki's Portfolio</a>
-        </h1>
-        <nav class="header-nav">
-          <ul class="header-nav-list">
-            <li class="header-nav-item"><a href="#works">Works</a></li>
-            <li class="header-nav-item"><a href="#skill">Skill</a></li>
-            <li class="header-nav-item"><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
+  <!-- header -->
+  <header class="header">
+    <div class="container">
+      <div class="left">
+        <div class="left__item">Kazuki Oguma</div>
       </div>
-    </header>
-    <!-- /header -->
-
-    <main class="content">
-
-      <!-- main-visual -->
-      <div class="main-visual">
-        <div class="main-visual-img"></div>
-      </div>
-      <!-- /main-visual -->
-
-      <div class="service">
-        <div class="inner">
-          <p class="service-title">Service</p>
-          <p class="service-text">
-            デザイン、コーディング、ライティング、SEOなどWeb領域全般に対応できるのが私の強みです。
-            サイト制作はお客様の夢を叶える仕事だと思っています。
-            夢を持っている方と一緒にお仕事ができたら嬉しいです。
-          </p>
+      <div class="middle"></div>
+      <div class="right">
+        <div class="right__item__three">
+          <a href="#"><img src="/img/menu.svg" alt="" width="100%"></a>
         </div>
-      </div>
-
-      <!-- works -->
-      <section class="works section" id="works">
-        <div class="inner">
-          <h2 class="title">Works</h2>
-          <div class="works-list">
-            <a class="works-item" href="#">
-              <p class="works-img"><img src="./img/works/aono.png" alt="" /></p>
-              <p class="works-name">蒼乃建設</p>
-              <p class="works-info">Design / Coding(Responsive)</p>
-            </a>
-            <a class="works-item" href="#">
-              <p class="works-img"><img src="./img/works/progate.png" alt="" /></p>
-              <p class="works-name">Progate</p>
-              <p class="works-info">Design / Coding(Responsive) / WordPress</p>
-            </a>
-            <a class="works-item" href="#">
-              <p class="works-img"><img src="./img/works/xeory.png" alt="" /></p>
-              <p class="works-name">xeory</p>
-              <p class="works-info">Design / Coding(Responsive)</p>
-            </a>
+        <div class="right__item__sns">
+          <div class="right__item__sns-github">
+            <a href="https://github.com/9mak"><img src="/img/sns/github.svg" alt="" width="100%"></a>
+          </div>
+          <div class="right__item__sns-twitter">
+            <a href="https://twitter.com/home?lang=ja"><img src="/img/sns/twitter.svg" alt="" width="100%"></a>
+          </div>
+          <div class="right__item__sns-instagram">
+            <a href="https://twitter.com/home?lang=ja"><img src="/img/sns/instagram.svg" alt="" width="100%"></a>
           </div>
         </div>
-      </section>
-      <!-- /works -->
-
-      <!-- skill -->
-      <section class="skill section" id="skill">
-        <div class="inner">
-          <h2 class="title">Skill</h2>
-          <div class="skill-list">
-            <div class="skill-item">
-              <p class="skill-img"><img src="img/skill/html5.svg" alt="" width="100%"></p>
-              <div class="skill-body">
-                <h3 class="skill-name">HTML5</h3>
-                <p class="skill-text">
-                  <!-- テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p> -->
-              </div>
-            </div>
-            <div class="skill-item">
-              <p class="skill-img"><img src="./img/skill/css3.svg" alt="" width="88%"></p>
-              <div class="skill-body">
-                <h3 class="skill-name">CSS</h3>
-                <p class="skill-text">
-                  <!-- テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p> -->
-              </div>
-            </div>
-            <div class="skill-item">
-              <p class="skill-img"><img src="./img/skill/javascript.svg" alt=""></p>
-              <div class="skill-body">
-                <h3 class="skill-name">JavaScript</h3>
-                <p class="skill-text">
-                  <!-- テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p> -->
-              </div>
-            </div>
-            <div class="skill-item">
-              <p class="skill-img"><img src="./img/skill/sass.svg" alt=""></p>
-              <div class="skill-body">
-                <h3 class="skill-name">Sass</h3>
-                <p class="skill-text">
-                  <!-- テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p> -->
-              </div>
-            </div>
-            <div class="skill-item">
-              <p class="skill-img"><img src="./img/skill/bootstrap.svg" alt=""></p>
-              <div class="skill-body">
-                <h3 class="skill-name">Bootstrap</h3>
-                <p class="skill-text">
-                  <!-- テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p> -->
-              </div>
-            </div>
-            <div class="skill-item">
-              <p class="skill-img"><img src="./img/skill/python.svg" alt=""></p>
-              <div class="skill-body">
-                <h3 class="skill-name">Python</h3>
-                <p class="skill-text">
-                  <!-- テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p> -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- /skill -->
-
-      <!-- contact -->
-      <section class="contact section" id="contact">
-        <div class="inner">
-          <h2 class="title">Contact</h2>
-          <p class="lead">
-            お問い合わせは、<br class="sp-only">SNSにてお願いいたします。
-          </p>
-          <div class="contact-list">
-            <a class="contact-item" href="https://twitter.com/_9mak___" target="_blank" rel="noopener">Twitter</a>
-            <a class="contact-item" href="https://www.instagram.com/svtltv2" target="_blank" rel="noopener">Instagram</a>
-          </div>
-        </div>
-      </section>
-      <!-- /contact -->
-      <div class="page-top" id="js-page-top">
-        <span class="material-icons-outlined">expand_less</span>
+        <a class="right__item__arrow" href="#main">
+            <img class="right__item__arrow-1" src="/img/arrow.svg" alt="" width="100%"></div>
+        </a>
+    </div>
+  </header>
+  
+  <!-- main -->
+  <main id="main" class="main">
+    <div class="nav">
+      <div class="nav__burger">
+        <span class="nav__burger-1"></span>
+        <span class="nav__burger-2"></span>
+        <span class="nav__burger-3"></span>
       </div>
-    </main>
+    </div>
+    <section class="ware">
+      <img class="ware__ware" src="/img/mv.jpg" alt="" width="100%">
+      <div class="ware__num">01</div>
+      <div class="ware__about">
+        <p>このページでは、</p>
+        <p>弊社のサービスをご紹介しております。</p>
+        <p>幅広いサービスを行っております。</p>
+      </div>
+    </section>
+    <section class="skill">
+      <div class="skill__num">02</div>
+      <div class="skill__item">
+        <div class="skill__item__web">web</div>
+        <div class="skill__item__infra">infra</div>
+        <div class="skill__item__insta">insta</div>
+      </div>
+    </section>
+    <section class="works">
+      <div class="works__num">03</div>
+      <div class="works__item">
+        <div class="works__item__web">web</div>
+        <div class="works__item__infra">infra</div>
+        <div class="works__item__insta">insta</div>
+      </div>    
+    </section>
+    <section class="contact"></section>
+  </main>
 
-    <!-- footer -->
-    <footer class="footer">
-      <div class="copyright">&copy;Kazuki Oguma</div>
-    </footer>
-    <!-- /footer -->
+  <!-- footer -->
+  <footer class="footer">
+    <div class="three">
+      <canvas id="myCanvas" class="myCanvas"></canvas>
+    </div>
+    <div class="nav">
+      <div class="nav__home"></div>
+      <div class="nav__"></div>
+      <div class="nav__"></div>
+      <div class="nav__"></div>
+      <div class="nav__"></div>
+    </div>
+    <div class="copy">
+      &copy Kazuki <a class="encore" href="#">O</a>guma
+    </div>
+  </footer>
 
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type='text/javascript' src="js/script.js"></script>
+  <!-- JavaScript -->
+  <script src="js/three/three.min.js"></script>
+  <script src="js/three/OrbitControls.js"></script>
+  <script type="text/javascript" src="/js/script.js"></script>
 </body>
 </html>
