--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <!-- og -->
 
   <!-- css -->
-  <link rel="stylesheet" href="/css/ress.css">
-  <link rel="stylesheet" href="/css/styele.css">
+  <link rel="stylesheet" href="./css/ress.css">
+  <link rel="stylesheet" href="./css/styele.css">
 
 </head>
 <body>
@@ -100,8 +100,8 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="js/three/three.min.js"></script>
-  <script src="js/three/OrbitControls.js"></script>
-  <script type="text/javascript" src="/js/script.js"></script>
+  <script src="./js/three/three.min.js"></script>
+  <script src="./js/three/OrbitControls.js"></script>
+  <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
