--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
       <div class="middle"></div>
       <div class="right">
         <div class="right__item__three">
-          <a href="#"><img src="/img/menu.svg" alt="" width="100%"></a>
+          <a href="#"><img src="./img/menu.svg" alt="" width="100%"></a>
         </div>
         <div class="right__item__sns">
           <div class="right__item__sns-github">
-            <a href="https://github.com/9mak"><img src="/img/sns/github.svg" alt="" width="100%"></a>
+            <a href="https://github.com/9mak"><img src="./img/sns/github.svg" alt="" width="100%"></a>
           </div>
           <div class="right__item__sns-twitter">
-            <a href="https://twitter.com/home?lang=ja"><img src="/img/sns/twitter.svg" alt="" width="100%"></a>
+            <a href="https://twitter.com/home?lang=ja"><img src="./img/sns/twitter.svg" alt="" width="100%"></a>
           </div>
           <div class="right__item__sns-instagram">
-            <a href="https://twitter.com/home?lang=ja"><img src="/img/sns/instagram.svg" alt="" width="100%"></a>
+            <a href="https://www.instagram.com/_9mak___"><img src="./img/sns/instagram.svg" alt="" width="100%"></a>
           </div>
         </div>
         <a class="right__item__arrow" href="#main">
-            <img class="right__item__arrow-1" src="/img/arrow.svg" alt="" width="100%"></div>
+            <img class="right__item__arrow-1" src="./img/arrow.svg" alt="" width="100%"></div>
         </a>
     </div>
   </header>
@@ -55,7 +55,7 @@
       </div>
     </div>
     <section class="ware">
-      <img class="ware__ware" src="/img/mv.jpg" alt="" width="100%">
+      <img class="ware__ware" src="./img/mv.jpg" alt="" width="100%">
       <div class="ware__num">01</div>
       <div class="ware__about">
         <p>このページでは、</p>
