--- a/index.html
+++ b/index.html
@@ -55,44 +55,74 @@
       </div>
     </div>
     <section class="ware">
-      <img class="ware__ware" src="./img/mv.jpg" alt="" width="100%">
+      <picture class="sample">
+        <source srcset="./img/mv.jpg" media="(min-width: 300px)" /><!-- ○○px以上で表示する画像 -->
+        <source srcset="./img/mv.jpg" media="(min-width: 768px)" /><!-- △△px以上で表示する画像 -->
+        <source srcset="./img/mv.jpg" media="(min-width: 1000px)" /><!-- △△px以上で表示する画像 -->
+        <img class="ware__ware" src="./img/mv.jpg" alt="" width="100%">
+      </picture>
       <div class="ware__num">01</div>
       <div class="ware__about">
+        <div class="ware__about__title">Me</div>
         <p>このページでは、</p>
         <p>弊社のサービスをご紹介しております。</p>
         <p>幅広いサービスを行っております。</p>
+        <button type="button">aaa</button>
       </div>
     </section>
     <section class="skill">
       <div class="skill__num">02</div>
-      <div class="skill__item">
-        <div class="skill__item__web">web</div>
-        <div class="skill__item__infra">infra</div>
-        <div class="skill__item__insta">insta</div>
+      <div class="skill__about">
+        <div class="skill__about__title">Skill</div>
+        <div class="skill__about__set">
+          <img src="./img/skill/html5.svg" alt="" width="10%">
+          <img src="./img/skill/css3.svg" alt="" width="10%">
+          <img src="./img/skill/javascript.svg" alt="" width="10%">
+          <img src="./img/skill/sass.svg" alt="" width="10%">
+          <img src="./img/skill/bootstrap.svg" alt="" width="10%">
+          <img src="./img/skill/github.svg" alt="" width="10%">
+          <img src="./img/skill/python.svg" alt="" width="10%">
+          <img src="./img/skill/django.svg" alt="" width="10%">
+          <img src="./img/skill/linux.svg" alt="" width="10%">
+          <img src="./img/skill/jquery.svg" alt="" width="10%">
+        </div>
+        <div class="skill__about__learn">Learning now...
+          <img src="./img/skill/vue.svg" alt="" width="10%">
+          <img src="./img/skill/react.svg" alt="" width="10%">
+          <img src="./img/skill/photoshop.svg" alt="" width="10%">
+          <img src="./img/skill/lightroom.svg" alt="" width="10%">
+        </div>
       </div>
     </section>
     <section class="works">
       <div class="works__num">03</div>
-      <div class="works__item">
-        <div class="works__item__web">web</div>
-        <div class="works__item__infra">infra</div>
-        <div class="works__item__insta">insta</div>
-      </div>    
+      <div class="works__about">
+        <div class="works__about__1">1</div>
+        <div class="works__about__2">2</div>
+        <div class="works__about__3">3</div>
+      </div>
     </section>
-    <section class="contact"></section>
+    <section class="contact">
+      <div class="contact__num">04</div>
+      <div class="contact__about">
+        <div class="contact__about__1">1</div>
+        <div class="contact__about__2">2</div>
+        <div class="contact__about__3">3</div>
+      </div>
+    </section>
   </main>
 
   <!-- footer -->
   <footer class="footer">
-    <div class="three">
-      <canvas id="myCanvas" class="myCanvas"></canvas>
-    </div>
+    <canvas id="myCanvas" class="three"></canvas>
     <div class="nav">
-      <div class="nav__home"></div>
-      <div class="nav__"></div>
-      <div class="nav__"></div>
-      <div class="nav__"></div>
-      <div class="nav__"></div>
+      <ul class="nav__item">
+        <li class="nav__item__home">HOME</li>
+        <li class="nav__item__me">01 - Me</li>
+        <li class="nav__item__skill">02 - Skill</li>
+        <li class="nav__item__works">03 - Works</li>
+        <li class="nav__item__contact">04 - Contact</li>
+      </ul>
     </div>
     <div class="copy">
       &copy Kazuki <a class="encore" href="#">O</a>guma
